--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       const email = document.getElementById('email').value;
 
       try {
-        const response = await fetch('http://localhost:3000/users', {
+        const response = await fetch('https://9fks4tfs.toystack.dev/users', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
